<resources>
    <string name="app_name">Ya.Finance</string>
    <string name="title_home">Home</string>
    <string name="title_operations">Operations</string>
    <string name="title_account">Accounts</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_templates">Templates</string>
    <string name="title_account_balance">Account balance</string>
    <string name="title_brief_overview">Brief overview</string>
    <string name="title_revenue">Revenue</string>
    <string name="title_expense">Expense</string>
    <string name="about_description">This is simple application for tracking your finances</string>
    <string name="title_dialog_about">About</string>
    <string name="title_version">Version</string>
    <string name="pref_name_currency">Default operation currency</string>
    <string name="pref_currency_default_value">RUB</string>
    <string name="text_error_available">This functionality is not yet available</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_date_from">Date from</string>
    <string name="title_date_to">Date to</string>
    <string name="title_type_operation">Type operation</string>
    <string name="title_value_operation">Operation amount</string>
    <string name="title_comment_operation">Operation comment</string>
    <string name="title_save_button">Save</string>
    <string name="title_save_template_button">Save template</string>
    <string name="wallet_title_main_currency">Main currency</string>
    <string name="text_error_obligatory">Fill in the required field</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="delete_operation_confirmation">Do you want to delete the operation?</string>
    <string name="delete_template_confirmation">Do you want to delete the template?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="adding_wallet_name">Название</string>
    <string name="adding_wallet_start_balance">Начальный баланс</string>
    <string name="adding_wallet_start_balance_value">0.0</string>
    <string name="adding_wallet_title">Добавить счет</string>
    <string name="delete_wallet_confirmation">Do you want to delete the account?</string>
    <string name="period_in_days">Period in days</string>
    <string name="with_period">With period</string>
    <string name="period_in_days_title">Period in days:</string>
    <string name="period_operations">Periodic </string>
    <string name="edit_wallet_title">Wallet editing</string>
    <string name="periodic_type">Periodic</string>
    <string name="template_type">Template</string>
    <string name="complete_type">Complete</string>

    <string name="food_category">Food</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="transport_category">Transport</string>
    <string name="education_category">Education</string>
    <string name="shopping_category">Shopping</string>
    <string name="accommodation_category">Accommodation</string>
    <string name="health_category">Health</string>
    <string name="vacation_category">Vacation</string>
    <string name="other_outcome_category">Other</string>
    <string name="salary_category">Salary</string>
    <string name="gifts_category">Gifts</string>
    <string name="alimony_category">Alimony</string>
    <string name="cash_back_category">Cash back</string>
    <string name="dividends_category">Dividends</string>
    <string name="sale_category">Sale</string>
    <string name="other_income_category">Other</string>

    <string name="cash">Cash</string>
    <string name="card">Card</string>
</resources>
