<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.home.view.HomeFragment">


        <TextView
            android:id="@+id/balance_main_currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_balance_text_view"
            tools:text="1 000 000,00" />

        <TextView
            android:id="@+id/main_currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/balance_main_currency_text_view"
            app:layout_constraintTop_toTopOf="@+id/balance_main_currency_text_view"
            tools:text="₽" />


        <TextView
            android:id="@+id/balance_second_currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_main_currency_text_view"
            tools:text="1 000 000,00" />

        <TextView
            android:id="@+id/second_currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"

            app:layout_constraintStart_toEndOf="@+id/balance_second_currency_text_view"
            app:layout_constraintTop_toTopOf="@+id/balance_second_currency_text_view"
            tools:text="$" />

        <TextView
            android:id="@+id/account_balance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/title_account_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_second_currency_text_view">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title_brief_overview_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/title_brief_overview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_revenue_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/title_revenue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_brief_overview_text_view" />


                <TextView
                    android:id="@+id/value_revenue_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"

                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/revenueText"
                    app:layout_constraintEnd_toStartOf="@+id/revenue_currency_text_view"
                    app:layout_constraintTop_toTopOf="@+id/title_revenue_text_view" />

                <TextView
                    android:id="@+id/revenue_currency_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"

                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/revenueText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/value_revenue_text_view"
                    tools:text="₽" />

                <TextView
                    android:id="@+id/title_expense_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/title_expense"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_revenue_text_view" />

                <TextView
                    android:id="@+id/value_expense_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/expenseText"
                    app:layout_constraintEnd_toStartOf="@+id/expense_currency_text_view"
                    app:layout_constraintTop_toTopOf="@+id/title_expense_text_view" />

                <TextView
                    android:id="@+id/expense_currency_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/expenseText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/value_expense_text_view"
                    tools:text="₽" />


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>